WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179783
NFC update ClassInfo to C++14
https://bugs.webkit.org/show_bug.cgi?id=179783
Summary
NFC update ClassInfo to C++14
JF Bastien
Reported
2017-11-16 10:18:58 PST
Forked from #179734, use `using` instead of `typedef`. It's easier to read.
Attachments
patch
(8.36 KB, patch)
2017-11-16 10:22 PST
,
JF Bastien
mark.lam
: review+
jfbastien
: commit-queue-
Details
Formatted Diff
Diff
patch
(8.28 KB, patch)
2017-11-16 10:27 PST
,
JF Bastien
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch
(8.35 KB, patch)
2017-11-17 14:39 PST
,
JF Bastien
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
JF Bastien
Comment 1
2017-11-16 10:22:07 PST
Created
attachment 327077
[details]
patch
Build Bot
Comment 2
2017-11-16 10:24:25 PST
Attachment 327077
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:43: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:49: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:52: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:55: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:58: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:61: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:64: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:67: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:70: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:73: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:76: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:79: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:82: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:85: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:88: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:91: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:94: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:97: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:100: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:103: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:109: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:112: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:115: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:118: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:121: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:124: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/JavaScriptCore/runtime/ClassInfo.h:127: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 27 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 3
2017-11-16 10:24:46 PST
Comment on
attachment 327077
[details]
patch r=me
Mark Lam
Comment 4
2017-11-16 10:25:44 PST
Comment on
attachment 327077
[details]
patch The style checker found issues. Please fix those single space chars on the supposed empty lines.
JF Bastien
Comment 5
2017-11-16 10:27:15 PST
Created
attachment 327080
[details]
patch Fix spaces. Will land after other patch to avoid merge conflict.
WebKit Commit Bot
Comment 6
2017-11-16 11:13:08 PST
Comment on
attachment 327080
[details]
patch Rejecting
attachment 327080
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 327080, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: t_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/JavaScriptCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/JavaScriptCore/runtime/ClassInfo.h Hunk #1 FAILED at 38. Hunk #2 succeeded at 219 (offset 4 lines). 1 out of 2 hunks FAILED -- saving rejects to file Source/JavaScriptCore/runtime/ClassInfo.h.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/5261473
JF Bastien
Comment 7
2017-11-17 14:39:02 PST
Created
attachment 327241
[details]
patch Rebase.
WebKit Commit Bot
Comment 8
2017-11-17 15:10:49 PST
Comment on
attachment 327241
[details]
patch Clearing flags on attachment: 327241 Committed
r224991
: <
https://trac.webkit.org/changeset/224991
>
WebKit Commit Bot
Comment 9
2017-11-17 15:10:50 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2017-11-17 15:11:16 PST
<
rdar://problem/35625214
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug