NFC update ClassInfo to C++14 https://bugs.webkit.org/show_bug.cgi?id=179783

Reviewed by Mark Lam.

Forked from #179734, use `using` instead of `typedef`. It's easier
to read.

* runtime/ClassInfo.h:


Canonical link: https://commits.webkit.org/195860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224991 268f45cc-cd09-0410-ab3c-d52691b4dbfc